# ocpy05

./: .gitignore  pyproject.toml
Exercice01/: main.py
Exercice02/: main.py
Exercice03/: main.py
Exercice04/: main.py
Exercice05/: main.py
Exercice06/: main.py
Exercice07/: main.py
Exercice08/: main.py
Exercice09/: main.py
Exercice10/: main.py
Exercice11/: main.py
Exercice12/: main.py
