[project]
name = "ocpy05"
version = "0.1.0"
description = "Python exercices"
requires-python = ">=3.13"
dependencies = []

[tool.black]
line-length = 120
target-version = ["py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude =[
    ".git",
    "__pycache__",
    "old",
    "build",
    "dist",
    ".venv",
    "*.pyc",
    "Exercice05",
    "Exercice06",
    "Exercice07",
    "Exercice08",
    "Exercice09",
    "Exercice10",
    "Exercice11",
    "Exercice12",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.2.0",
    "flake8-pyproject>=1.2.3",
]
